2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 0.1 ===

	* src/main.cpp:

	Uncomment debug define.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:

	Clean up on uninstall.

2005-11-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:
	* src/Prefs.cpp:
	* src/Prefs.h:

        Load font preferences from desktop and Epiphany prefs.

	* configure.ac:

        Misc cleanups, and check for ln -s.

	* data/Makefile.am:
	* data/thumbnailer.schemas.in:

	Fix the thumbnailer command, and fix the gconf schema install rule.

	* m4/gecko.m4:

	Don't pollute CXXFLAGS.

	* src/Writer.cpp:

	Add sanity check for empty display rect, instead of crashing with
	div-by-zero.

	* src/Makefile.am:
	* src/main.cpp:
	Don't build 3 separate programs for photo, thumbnail and print; instead
	build just gnome-web-photo and symlink gnome-web-thumbnail/print to it.
	Detect the mode with --mode argument or by invocation.

2005-11-12  Christian Persch  <chpe@cvs.gnome.org>

	* Makefile.am:

	Add ACLOCAL_AMFLAGS.

2005-11-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	A m4/gecko.m4:

	Use the gecko macro package from Epiphany.

2005-10-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/Makefile.am:

	Only add -lgkgfx when not building against xulrunner.

2005-10-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Check for NSS/PSM headers.

	* src/Components.cpp:

	Add a nsIBadCertListener implementation which accepts the
	cert for this session.

2005-10-27  Christian Persch  <chpe@cvs.gnome.org>

	Patch by Robert O'Callahan <rocallahan@novell.com>:

	* configure.ac:

	Allow building with xulrunner.

	* src/main.cpp:

	Abort if RegisterComponents fails.

2005-10-05  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gecko version check.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>
