@@ -1,5 +1,15 @@
 2005-11-26  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Writer.cpp:
+
+	Fix compile warning.
+
+	* src/main.cpp:
+
+	Don't crash on unknown or not given mode argument.
+
+2005-11-26  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 
 	Post-release version bump.
